re-fixed alignment

--- a/css/index.css
+++ b/css/index.css
@@ -226,11 +226,11 @@ h1 {
 .p {
       max-width: 75%;
       margin-left: -30px;
-      font-size: 26px;
+      font-size: 20px;
   }
 
   .left {
-    margin-left: 45px;
+    margin-left: 40px;
     margin-top: 70px;
   }
 
